[gd_scene load_steps=9 format=3 uid="uid://dm3g73dqb2gml"]

[ext_resource type="Script" path="res://Scripts/OverworldUI/Menu/MenuBoxes/Equipment/EquipmentBox.gd" id="1_q70hq"]
[ext_resource type="Texture2D" uid="uid://dfqyl2kbn6ygn" path="res://Sprites/UI_Sprites/NestedBox.png" id="3_1s6nt"]
[ext_resource type="FontFile" uid="uid://dcvb7cb63i04f" path="res://Fonts/poco/Poco.tres" id="4_dwoev"]
[ext_resource type="Script" path="res://Scripts/OverworldUI/Menu/MenuBoxes/Equipment/InventoryEquipmentBox.gd" id="5_byr8l"]
[ext_resource type="PackedScene" uid="uid://ucq5gpi7w3hm" path="res://Scenes/Overworld_UI/EquipmentBox/equip_info_container.tscn" id="6_akq17"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_a8l5r"]
texture = ExtResource("3_1s6nt")
texture_margin_left = 16.0
texture_margin_top = 16.0
texture_margin_right = 16.0
texture_margin_bottom = 16.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6bshl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_oexj8"]

[node name="EquipmentBox" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_q70hq")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = -2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="PartyMemberContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = -2

[node name="InventoryEquipmentBox" type="ItemList" parent="VBoxContainer/MarginContainer"]
visible = false
layout_mode = 2
theme_override_fonts/font = ExtResource("4_dwoev")
theme_override_font_sizes/font_size = 10
theme_override_styles/panel = SubResource("StyleBoxTexture_a8l5r")
theme_override_styles/focus = SubResource("StyleBoxEmpty_6bshl")
theme_override_styles/selected_focus = SubResource("StyleBoxEmpty_oexj8")
max_columns = 5
same_column_width = true
fixed_column_width = 96
script = ExtResource("5_byr8l")

[node name="EquipInfoContainer" parent="VBoxContainer" instance=ExtResource("6_akq17")]
layout_mode = 2
